--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,23 @@
 tr, tr td {
 	border: 1px solid #c6c6c6;
 }
+
+.table-list {
+    text-align: center;
+    width: 3%;
+}
+
+.table-list-wfop td:nth-child(1) {
+    width: 5%;
+    text-align: center;
+}
+.table-list-wfop td:nth-child(2) {
+    width: 5%;
+    text-align: center;
+}
+
+.table-list-wfop td input[type="input"] {
+    border:0;
+    text-align: left;
+    width: 100% !important;
+}
